# rss-bot

./: .env.template  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
bot/: .env.example  .env.template  fsm.py  keyboards.py  main.py  requirements.txt  settings.py
bot/core/: settings.py
bot/handlers/: news.py  support.py
bot/keyboards/: inline_keyboards.py
bot/routers/: __init__.py  unknown_command_router.py
bot/routers/callback_handlers/: __init__.py  menu_kb_callback_handlers.py
bot/routers/callbacks/: __init__.py  menu_kb_callback_router.py
bot/routers/commands/: __init__.py  news.py  news_router.py  support.py  support_router.py
bot/services/: __init__.py  database_service.py  news_service.py
database/: .env.template  exceptions.py  handlers.py  main.py
database/alembic/: env.py
database/alembic/versions/: 055b850d8e2e_updated_tables.py  1d78bb996d1e_updated_tables.py  (+4 more)
database/core/: settings.py
database/repositories/: __init__.py  news_repository.py  repository_depends.py  source_repository.py  user_repository.py  user_source_repository.py
database/routers/: __init__.py  news_router.py  origin_router.py  router_depends.py  source_router.py  user_router.py
database/services/: __init__.py  news_service.py  service_depends.py  source_service.py  user_service.py  user_source_service.py
fastapi-application/: .env.template
fastapi-application/core/: config.py
fastapi-application/utils/: __init__.py  case_converter.py
fastapi_app/: .dockerignore  .env.example  Dockerfile  alembic.ini  exceptions.py  handlers.py  log_handler.py  main.py  requirements.txt
fastapi_app/alembic/: env.py
fastapi_app/app/: middleware.py
fastapi_app/core/: __init__.py  settings.py
fastapi_app/repositories/: __init__.py  base_repository.py  news_repository.py  repository_depends.py  source_repository.py  user_repository.py  user_source_repository.py
fastapi_app/routers/: __init__.py  news_router.py  router_depends.py  source_router.py  user_router.py
fastapi_app/services/: __init__.py  news_service.py  service_depends.py  source_service.py  user_service.py  user_source_service.py
monitor/: .env.example  .env.template  Dockerfile  database_service.py  dtos.py  log_handler.py  main.py  parsing_service.py  requirements.txt  settings.py
monitor/core/: config.py  schemas.py
parser/: .env.template  main.py
parser/core/: schemas.py  settings.py
parser/crud/: users.py
parser/repositories/: __init__.py  news_repository.py  origin_repository.py  repository_depends.py  user_repository.py
parser/routers/: __init__.py  news_router.py  router_depends.py  user_router.py  users.py
parser/services/: __init__.py  origin_service.py  service_depends.py  user_service.py
(+48 files in other folders)
