[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
pydantic = {extras = ["email"], version = "^2.7.4"}
pydantic-settings = "^2.3.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
aiogram = "^3.13.1"
feedparser = "^6.0.11"
aiohttp = "^3.10.8"
schedule = "^1.2.2"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

