[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
pydantic = {extras = ["email"], version = "^2.7.4"}
pydantic-settings = "^2.3.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
aiogram = "^3.13.1"
feedparser = "^6.0.11"
aiohttp = "^3.10.8"
schedule = "^1.2.2"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.8"


[tool.ruff]
src = ["src/*", "tests/*"]
exclude = [
    "fastapi_app/alembic/*",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "A",       # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "E", "W",  # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "F",       # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "B",       # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "Q",       # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "PL",      # https://docs.astral.sh/ruff/rules/#pylint-pl
    "COM",     # https://docs.astral.sh/ruff/rules/#flake8-commas-com
    "SIM",     # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "ERA",     # https://docs.astral.sh/ruff/rules/#eradicate-era
    "PERF",    # https://docs.astral.sh/ruff/rules/#perflint-perf
    "FURB",    # https://docs.astral.sh/ruff/rules/#refurb-furb
    "ASYNC",   # https://docs.astral.sh/ruff/rules/#flake8-async-async
    "C4",      # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "T20",     # https://docs.astral.sh/ruff/rules/#flake8-print-t20
]
ignore = [
    "PLC2701",  # https://docs.astral.sh/ruff/rules/import-private-name/
    "PLR6301",  # https://docs.astral.sh/ruff/rules/no-self-use/
     "E402",
     "F403",
    "SIM117",
]
preview = true  # https://docs.astral.sh/ruff/preview/#enabling-preview-mode

[tool.ruff.lint.isort]
combine-as-imports = true
detect-same-package = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]    # imported but unused

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
